--- a/css/creative.css
+++ b/css/creative.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
 }
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Merriweather', Arial, sans-serif;
 }
 hr {
   border-color: #F05F40;
@@ -39,7 +39,7 @@ h6 {
 }
 p {
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 2.5;
   margin-bottom: 20px;
 }
 .bg-primary {
@@ -164,7 +164,7 @@ header {
   color: white;
   filter: alpha(opacity=50);
   z-index: -1;
-  
+
 
 }
 
@@ -177,7 +177,6 @@ header .header-content {
 }
 header .header-content .header-content-inner h1 {
   font-weight: 700;
-  text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 0;
   font-size: 30px;
@@ -423,4 +422,10 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #222222;
+}
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
 }
