Add requirements section and team section

--- a/css/creative.css
+++ b/css/creative.css
@@ -53,7 +53,7 @@ p {
   color: rgba(255, 255, 255, 0.7);
 }
 section {
-  padding: 100px 0;
+  padding: 80px 0;
 }
 aside {
   padding: 50px 0;
@@ -430,4 +430,11 @@ body {
 
 .red {
   color: red;
+}
+
+.caption {
+  line-height: 25px;
+  margin-left: 2px;
+  margin-right: auto;
+  font-size: 13px;
 }
